--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "next": "12.0.4",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-top-loading-bar": "^2.1.0"
+    "react-top-loading-bar": "^2.1.0",
+    "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "7",
