--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.0.4",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
