--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11",
     "framer-motion": "^4",
     "next": "12.0.4",
+    "next-seo": "^4.28.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
