--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.4",
     "react-top-loading-bar": "^2.1.0",
     "react-visibility-sensor": "^5.1.1"
   },
