--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.24.0",
     "framer-motion": "^4",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "next-seo": "^4.28.1",
     "nprogress": "^0.2.0",
