--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "axios": "^0.24.0",
     "framer-motion": "^4",
+    "graphql": "^16.0.1",
+    "graphql-request": "^3.7.0",
     "moment": "^2.29.1",
     "next": "12.0.4",
     "next-seo": "^4.28.1",
@@ -24,7 +24,6 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
-    "react-top-loading-bar": "^2.1.0",
     "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
