--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@graphcms/rich-text-react-renderer": "^0.3.2",
     "framer-motion": "^4",
     "graphql": "^16.0.1",
     "graphql-request": "^3.7.0",
