--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "recharts": "^2.1.6"
   },
   "devDependencies": {
     "eslint": "7",
