--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@graphcms/rich-text-react-renderer": "^0.3.2",
+    "@nivo/core": "^0.74.0",
+    "@nivo/line": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.24.0",
     "framer-motion": "^4",
@@ -27,8 +30,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
-    "react-visibility-sensor": "^5.1.1",
-    "recharts": "^2.1.6"
+    "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "7",
