--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@graphcms/rich-text-react-renderer": "^0.3.2",
+    "@nivo/calendar": "^0.74.0",
     "@nivo/core": "^0.74.0",
     "@nivo/line": "^0.74.0",
     "@nivo/pie": "^0.74.0",
