--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nivo/pie": "^0.74.0",
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.24.0",
+    "downshift": "^6.1.7",
     "framer-motion": "^4",
     "graphql": "^16.0.1",
     "graphql-request": "^3.7.0",
@@ -29,6 +30,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
     "react-visibility-sensor": "^5.1.1"
