--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-countup": "^6.1.0",
     "react-dom": "17.0.2",
-    "react-flip-move": "^3.0.4",
+    "react-flip-toolkit": "^7.0.13",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.4",
     "react-visibility-sensor": "^5.1.1"
